force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/AccountKey__c.field-meta.xml
<CustomField>
    <fullName>AccountKey__c</fullName>
    <label>Account Key</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>