force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/ContactKey__c.field-meta.xml
<CustomField>
    <fullName>ContactKey__c</fullName>
    <label>Contact Key</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>