force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/Declaration_Number__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Number__c</fullName>
    <label>Declaration Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>