force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <type>DateTime</type>
</CustomField>