force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Acquisition_Method__c.field-meta.xml
<CustomField>
    <fullName>gaid__Acquisition_Method__c</fullName>
    <label>Acquisition Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>