force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Date_Made__c.field-meta.xml
<CustomField>
    <fullName>gaid__Date_Made__c</fullName>
    <label>Date Made</label>
    <type>Date</type>
</CustomField>