force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__First_Name__c.field-meta.xml
<CustomField>
    <fullName>gaid__First_Name__c</fullName>
    <formula>BLANKVALUE(gaid__Firstname__c, gaid__Contact__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>