force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Firstname__c.field-meta.xml
<CustomField>
    <fullName>gaid__Firstname__c</fullName>
    <inlineHelpText>This value overrides the default contact value.</inlineHelpText>
    <label>First Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>