force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Housename_or_number__c.field-meta.xml
<CustomField>
    <fullName>gaid__Housename_or_number__c</fullName>
    <label>House name or number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>