force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Lastname__c.field-meta.xml
<CustomField>
    <fullName>gaid__Lastname__c</fullName>
    <inlineHelpText>This overrides the contact default.</inlineHelpText>
    <label>Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>