force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Overseas__c.field-meta.xml
<CustomField>
    <fullName>gaid__Overseas__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this address is an overseas address</inlineHelpText>
    <label>Overseas</label>
    <type>Checkbox</type>
</CustomField>