force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Postalcode__c.field-meta.xml
<CustomField>
    <fullName>gaid__Postalcode__c</fullName>
    <label>Postal code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>