force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Reason_for_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>gaid__Reason_for_Deactivation__c</fullName>
    <label>Reason for Deactivation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>