force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>gaid__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>