force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Title__c.field-meta.xml
<CustomField>
    <fullName>gaid__Title__c</fullName>
    <formula>gaid__Contact__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>