force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/gaid__Type__c.field-meta.xml
<CustomField>
    <fullName>gaid__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>CARE N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>