force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/GiftAid_Declaration_Key__c.field-meta.xml
<CustomField>
    <fullName>GiftAid_Declaration_Key__c</fullName>
    <label>GiftAid Declaration Key</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>