force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Online Membership Application</fullName>
            </value>
            <value>
                <fullName>Intrabiz Class Bookings</fullName>
            </value>
            <value>
                <fullName>MIDIRS EnterpriseMRM System</fullName>
            </value>
            <value>
                <fullName>Renewing membership</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Nearly New Sales event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>