force-app/main/default/objects/gaid__Gift_Aid_Declaration__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>A5GREEN</fullName>
            </value>
            <value>
                <fullName>B&amp;B1002</fullName>
            </value>
            <value>
                <fullName>BBDON</fullName>
            </value>
            <value>
                <fullName>BBEM</fullName>
            </value>
            <value>
                <fullName>BBPH</fullName>
            </value>
            <value>
                <fullName>BEVENT</fullName>
            </value>
            <value>
                <fullName>BENQ602</fullName>
            </value>
            <value>
                <fullName>EAS</fullName>
            </value>
            <value>
                <fullName>EEM</fullName>
            </value>
            <value>
                <fullName>EEPHE</fullName>
            </value>
            <value>
                <fullName>ENQ602</fullName>
            </value>
            <value>
                <fullName>ENQA1</fullName>
            </value>
            <value>
                <fullName>ENQG1</fullName>
            </value>
            <value>
                <fullName>FUUNS</fullName>
            </value>
            <value>
                <fullName>FBPS</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>GIFTAID</fullName>
            </value>
            <value>
                <fullName>GATGA1112</fullName>
            </value>
            <value>
                <fullName>IBIZ1</fullName>
            </value>
            <value>
                <fullName>IMPORT</fullName>
            </value>
            <value>
                <fullName>MANTE</fullName>
            </value>
            <value>
                <fullName>MCHQ</fullName>
            </value>
            <value>
                <fullName>MEMREN</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MIDIRS</fullName>
            </value>
            <value>
                <fullName>MIDIRS0004</fullName>
            </value>
            <value>
                <fullName>MIDIRS0003</fullName>
            </value>
            <value>
                <fullName>MIDIRS0002</fullName>
            </value>
            <value>
                <fullName>MIDIRS0001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>